add security to API
